# litsvm-detection

./: .gitignore  CMakeLists.txt
include/: svm_struct_api.h  svm_struct_api_types.h  svm_struct_common.h  svm_struct_learn.h
src/: svm_common.cpp  svm_hideo.cpp  svm_learn.cpp  svm_struct_api.cpp  svm_struct_classify.cpp  svm_struct_learn.cpp  svm_struct_learn_custom.cpp  svm_struct_main.cpp
